:construction: fix swagger and fix group
